--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "dark",
         "cyberpunk",
         "colorful",
+        "high-contrast",
         "bright",
         "darkblue",
         "cyan",
